Setup scene builder Added textField Added search button